--- a/client/src/components/ViewPDF.css
+++ b/client/src/components/ViewPDF.css
@@ -1,8 +1,12 @@
 .pdf-container {
     width: 100%;
-    height: 900px;
+    height: 800px;
     overflow-y: auto;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container {
+    margin-top: 50px;
 }
